...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Statistics" backgroundImage="black-parchment-paper-texture"/>
                                        <connections>
                                            <segue destination="Ke4-fK-WYT" kind="show" identifier="3segue" id="v8R-Ie-WKQ"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Dark Souls News" backgroundImage="black-parchment-paper-texture"/>
                                        <connections>
                                            <segue destination="Ke4-fK-WYT" kind="show" identifier="4segue" id="swh-rT-tld"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Checklists" backgroundImage="black-parchment-paper-texture"/>
                                        <connections>
                                            <segue destination="Ke4-fK-WYT" kind="show" identifier="2segue" id="gyK-eu-m37"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Achievements" backgroundImage="black-parchment-paper-texture"/>
                                        <connections>
                                            <segue destination="Ke4-fK-WYT" kind="show" identifier="1segue" id="fdd-Ae-kAC"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Dark Souls III" id="c9E-Ya-B4z">
                        <barButtonItem key="rightBarButtonItem" title="About" id="LLt-KG-lIS">
                            <connections>
...
                                    <constraint firstAttribute="height" constant="50" id="M6b-3k-5Tm"/>
                                </constraints>
                                <state key="normal" title="Button" image="unchecked">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="fqs-Gw-EgJ"/>
                                </constraints>
                                <state key="normal" title="Checklist" image="unchecked">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
