...
            "covenant rewards.", isCollection: true, isObtained: false,
            iconLocation: "013_master_of_miracles"))
        achievementInfo.append(AchievementSeed(number: 14, name: "Master of Rings", score: 30,
            description: "Acquire all rings.", guide: "This requires you to collect all 107 rings. " +
            "There are 70 basic rings, and the rest are +1, +2 and +3 versions.", isCollection: true,
            isObtained: false, iconLocation: "014_master_of_rings"))
        achievementInfo.append(AchievementSeed(number: 15, name: "Master of Expression", score: 30,
            description: "Learn all gestures.", guide: "There are 33 gestures in the game, you start with " +
            "7 and must find the other 26.", isCollection: true, isObtained: false,
            iconLocation: "015_master_of_expression"))
        achievementInfo.append(AchievementSeed(number: 16, name: "Ultimate Bonfire", score: 30,
            description: "Reinforce a bonfire to the highest level.", guide: "To get this achievement, " +
            "you must upgrade the Firelink Shrine bonfire 10 times using Undead Bone Shards.", isCollection: false,
            isObtained: false, iconLocation: "016_ultimate_bonfire"))
        achievementInfo.append(AchievementSeed(number: 17, name: "Ultimate Estus", score: 30,
            description: "Reinforce the Estus Flask to the highest level.", guide: "To get this achievement, " +
            "you must get Andre the Blacksmith to upgrade your Estus flask 11 times using Estus Shards.",
            isCollection: false, isObtained: false, iconLocation: "017_ultimate_estus"))
...
            "cruxification woods", guide: "", isCollected: false, iconLocation: "107_ring_of_sacrifice-icon"))
    }
    
    private func createExpressionInfo() {
        let autRec: String = "Automatically received."
        
        mastOfExpressionCollection.append(ItemSeed(belongsTo: 15, name: "Point Forward",
            description: "", location: "", acquiredFrom: autRec, guide: "", isCollected: true,
            iconLocation: "001-pointforward"))
        mastOfExpressionCollection.append(ItemSeed(belongsTo: 15, name: "Point Up",
            description: "", location: "", acquiredFrom: autRec, guide: "", isCollected: true,
            iconLocation: "002-pointup"))
        mastOfExpressionCollection.append(ItemSeed(belongsTo: 15, name: "Point Down",
...
